--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>AI Text Summarizer App</h1>
-    <p> Welcome to the AI Text Summarizer App! This app leverages the power of Artificial Intelligence APIs to provide concise summaries of long texts. Whether you have a lengthy article, research paper, or any other text document that you want to summarize quickly, our app can assist you. </p>
+    <p> Welcome to the AI Text Summarizer App! This app uses the power of Artificial Intelligence APIs to provide concise summaries of long texts. Whether you have a lengthy article, research paper, or any other text document that you want to summarize quickly, our app can assist you. </p>
     <p> Simply paste your text into the text area below and click the "Summarize" button. </p>
     <div class="container">
       <div class="text-box">
@@ -26,8 +26,7 @@
       <div class="cta-content">
         <div class="cta-text">
         <h2>A simple text summarizer app </h2>
-        <p>This app is made with the help of Postman and Hugging Face.</p>
-          <!-- <a href="https://huggingface.co/facebook/bart-large-cnn" target="_blank" rel="noopener nofollow">View Hugging Face Model Webpage</a> -->
+        <p>This app is made with the help of Express.js and Hugging Face.</p>
         </div>
         <img src="images/learning2.png"></img>
       </div>
